# The-Watcher-Of-The-Wall

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  database.sqlite
backend/actix/: Cargo.toml
backend/actix/src/: main.rs
backend/actix/src/api_check/: mod.rs
backend/actix/src/db_control/: mod.rs
backend/actix/src/generate_token/: mod.rs
backend/actix/src/redis_control/: mod.rs
backend/actix/src/validate_token/: mod.rs
backend/actix/tests/: api_check_test.rs
backend/src/: main.py
backend/src/data/: SQLite.py  database.sqlite
backend/src/model/: Keywords.py  NewsItem.py
backend/src/service/: Keywords.py  Newsitem.py
backend/src/web/: DB.py  Keywords.py  Newsitem.py
front/: package-lock.json  package.json
front/src/routes/: +page.svelte
front/src/routes/comment/: +page.svelte
front/src/routes/error/: +page.svelte
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/routes/: +layout.svelte
frontend/src/routes/guide/: +page.svelte
frontend/src/routes/news/: +page.svelte  stores.js
frontend/src/routes/press/: +page.svelte
frontend/src/routes/report/: +page.svelte
frontend/src/routes/setting/: +page.svelte
frontend/sveltekit/: package-lock.json  package.json  svelte.config.js
frontend/sveltekit/src/routes/: +layout.svelte  +page.svelte
frontend/sveltekit/src/utils/: utils.js
svelte/: package-lock.json  package.json  tailwind.config.cjs
svelte/src/routes/: +layout.svelte  +page.svelte
svelte/src/routes/About/: +page.svelte
svelte/src/stores/: axiosStore.ts
(+6 files in other folders)
