[package]
name = "auth-only"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
log = "0.4.22"
env_logger = "0.11.5"

rand = "0.8.5"
sha2 = "0.10.8"
chrono = "0.4.38"
serde_json = "1.0.120"


# DB Control, Development Purpose Only, Use AWS for Production Of Course
# https://crates.io/crates/tokio-postgres
tokio-postgres = "0.7.10"
tokio = { version = "1", features = ["full"] }
redis = "0.26.0"
lazy_static = "1.4.0"


[dev-dependencies]
# https://crates.io/crates/actix-rt
actix-rt = "2"
awc = "3.5.0"


